<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:circularflow_radiusInDP="20dp"
        tools:context=".RelativelayoutActivity">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/user_details"
            android:textColor="@color/cyan"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/txtHeader"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/etName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"


            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/etEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_margin="5dp"
            android:textSize="18sp"
            app:hintTextColor="@android:color/darker_gray"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/cyan">

            <EditText
                android:id="@+id/etPwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/etEmail"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/border"
                android:ems="10"
                android:hint="@string/enter_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"


                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>


        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_below="@id/layout_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:padding="5dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPhone"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_margin="5dp"
            android:gravity="start"
            android:padding="10dp"
            android:text="@string/select_age"
            android:textSize="18sp"
            android:textStyle="bold" />

        <NumberPicker
            android:id="@+id/npAge"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@id/txtAge"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/border"
            android:orientation="horizontal" />

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/npAge"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"

            android:layout_margin="5dp"
            android:backgroundTint="@color/cyan"
            android:text="@string/next"
            tools:ignore="TextContrastCheck" />

    </RelativeLayout>

</ScrollView>