<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConstraintLayoutActivity">

    <ImageView
        android:id="@+id/imgL1"
        style="@style/imgStyle"
        app:layout_constraintBottom_toTopOf="@id/imgL2"
        app:layout_constraintEnd_toStartOf="@id/imgR1"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/school"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnTop"
        style="@style/Style"
        android:text="@string/top"
        app:layout_constraintBottom_toTopOf="@+id/btnCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/btnCenter"
        style="@style/Style"
        android:text="@string/center_view"
        app:layout_constraintBottom_toTopOf="@+id/btnBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTop" />

    <Button
        android:id="@+id/btnBottom"
        style="@style/Style"
        android:text="@string/bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCenter"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/imgR1"
        style="@style/imgStyle"
        app:layout_constraintBottom_toTopOf="@id/imgR2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/imgL1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/school"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgL2"
        style="@style/imgStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgR2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgL1"
        app:srcCompat="@drawable/school"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imgR2"
        style="@style/imgStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/imgL2"
        app:layout_constraintTop_toBottomOf="@id/imgR1"
        app:srcCompat="@drawable/school"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>